--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "metrica",
+    "name": "analytics",
     "scripts": {
         "webpack": "webpack --colors --config webpack.dev.js",
         "webpack-watch": "webpack --watch --colors --config webpack.dev.js",
