--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "gulp": "gulp"
     },
     "devDependencies": {
+        "@antv/data-set": "^0.11.7",
+        "@antv/g2": "^4.0.15",
         "@babel/core": "^7.4.3",
         "@typescript-eslint/eslint-plugin": "^3.2.0",
         "@typescript-eslint/parser": "^3.2.0",
@@ -20,6 +22,7 @@
         "gulp-less": "^4.0.1",
         "gulp-rename": "^2.0.0",
         "style-loader": "^1.2.1",
+        "vue-google-charts": "^0.3.3",
         "vue-loader": "^15.8.3",
         "vue-style-loader": "^4.1.2",
         "vue-template-compiler": "^2.6.11",
