--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
     "name": "greencheap/analytics",
     "type": "greencheap-extension",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "title": "Google Analytics",
     "description": "Google Analytics'dan gelen verilerle istatistikler tutabilirsiniz. Analytics'e girmeden tüm raporlarınızı görebilirsiniz.",
     "license": "MIT",
     "authors": [
         {
             "name": "GreenCheap",
-            "email": "info@greencheap.net",
-            "homepage": "http://greencheap.net"
+            "email": "support@greencheap.net",
+            "homepage": "https://greencheap.net"
         }
     ],
     "extra": {
